--- a/src/Components/MainNavigation/MainNavigation.css
+++ b/src/Components/MainNavigation/MainNavigation.css
@@ -1,34 +1,41 @@
+
 .navbar {
   background-color: #333;
   color: #fff;
-  padding: 10px 0;
-}
-
-.container {
+  padding: 10px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.logo a {
+.navbar-logo {
   text-decoration: none;
-  color: #fff;
   font-size: 24px;
-  font-weight: bold;
+  color: #fff;
 }
 
-.nav-links {
+.navbar-nav {
   list-style: none;
-  padding: 0;
   display: flex;
+  gap: 10px;
 }
 
-.nav-links li {
-  margin-right: 20px;
+.nav-item {
+  margin: 0;
 }
 
-.nav-links a {
+.nav-link {
   text-decoration: none;
   color: #fff;
-  font-size: 16px;
+  padding: 5px 10px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+
+.nav-link-button {
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  padding: 5px 10px;
 }
